# dotfiles-hyprland

./: .gitignore  README.md  install.sh  kdeglobals
ags/: CLAUDE.md  TODOS.md  app.tsx  style.scss  weather.conf
ags/docs/: popup-architecture.md
ags/lib/: constants.ts  logger.ts  popup-manager.ts  system-commands.ts  ui-components.ts  weather-codes.ts
ags/lib/constants/: polling.ts  ui.ts
ags/widgets/bar/: Clock.tsx  SystemMonitor.tsx  Weather.tsx  index.tsx
ags/widgets/popups/: backdrop.tsx
ags/widgets/popups/audio/: AudioPopup.tsx
ags/widgets/popups/brightness/: night-light.ts
ags/widgets/popups/clipboard/: ClipboardPopup.tsx
ags/widgets/popups/media/: media-utils.ts
ags/widgets/popups/notifications/: NotificationOSD.tsx
ags/widgets/popups/weather/: WeatherPopup.tsx
ags/widgets/system-tray/: Bluetooth.tsx  Clipboard.tsx  Media.tsx  Network.tsx  index.tsx
color-schemes/: PurpleDark.colors
gtk-3.0/: colors.css  gtk.css  settings.ini
gtk-4.0/: colors.css  gtk.css  settings.ini
hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
hypr-portal-effect/: CLAUDE.md  CMakeLists.txt  hyprpm.toml  reload-plugin.sh  test-config.conf  test.sh
hypr-portal-effect/src/: PortalEffect.cpp  PortalEffect.hpp  PortalPassElement.cpp  PortalPassElement.hpp  Shaders.hpp  main.cpp
hypr-vortex/: CLAUDE.md  Cargo.toml  vortex-close.sh
hypr-vortex/src/: animation.rs  main.rs  overlay.rs  screenshot.rs
hypr-vortex/src/animations/: fade.rs  mod.rs  shrink.rs  vortex.rs
hypr/scripts/: raise-or-run.sh  set-brightness.sh
hypr/shaders/: brightness-current.glsl  brightness.glsl  nightlight.glsl
qt5ct/: qt5ct.conf
